first andamio client commit from sisane-client

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,10 +2,10 @@
 /*
  * Copyright (c) 2015 by Rafael Angel Aznar Aparici (rafaaznar at gmail dot com)
  * 
- * sisane: The stunning micro-library that helps you to develop easily 
- *             AJAX web applications by using Angular.js 1.x & sisane-server
- * sisane is distributed under the MIT License (MIT)
- * Sources at https://github.com/rafaelaznar/sisane
+ * andamio: The stunning micro-library that helps you to develop easily 
+ *             AJAX web applications by using Angular.js 1.x & andamio-server
+ * andamio is distributed under the MIT License (MIT)
+ * Sources at https://github.com/rafaelaznar/andamio
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -35,7 +35,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="Rafael Aznar">
-        <title>sisane</title>      
+        <title>andamio</title>      
         <!-- see resetCSS  -->
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css">
@@ -44,7 +44,7 @@
         <link href="css/main/main.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
         <!-- html5 mode off
-        <base href="/sisane/index.html" /> 
+        <base href="/andamio/index.html" /> 
         -->
     </head>
     <body style="font-family: Questrial, serif;">                        
