--- a/public_html/js/system/footer.html
+++ b/public_html/js/system/footer.html
@@ -2,9 +2,9 @@
 <!--
 Copyright (c) 2015 by Rafael Angel Aznar Aparici (rafaaznar at gmail dot com)
 
-sisane: The stunning micro-library that helps you to develop easily 
-            AJAX web applications by using Angular.js 1.x & sisane-server
-sisane is distributed under the MIT License (MIT)
+andamio: The stunning micro-library that helps you to develop easily 
+            AJAX web applications by using Angular.js 1.x & andamio-server
+andamio is distributed under the MIT License (MIT)
 Sources at https://github.com/rafaelaznar/
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -28,6 +28,6 @@ THE SOFTWARE.
 -->
 <a href="https://github.com/rafaelaznar"  style="font-family: Questrial, serif;">
     <span class="pull-left"></span>
-    <span class="pull-right"> Powered by sisane <i class="fa fa-github-alt"></i></span>
+    <span class="pull-right"> Powered by andamio <i class="fa fa-github-alt"></i></span>
 </a>
 <div class="clearfix"></div>
