--- a/public_html/js/system/menu.html
+++ b/public_html/js/system/menu.html
@@ -2,9 +2,9 @@
 <!--
 Copyright (c) 2015 by Rafael Angel Aznar Aparici (rafaaznar at gmail dot com)
 
-sisane: The stunning micro-library that helps you to develop easily 
-            AJAX web applications by using Angular.js 1.x & sisane-server
-sisane is distributed under the MIT License (MIT)
+andamio: The stunning micro-library that helps you to develop easily 
+            AJAX web applications by using Angular.js 1.x & andamio-server
+andamio is distributed under the MIT License (MIT)
 Sources at https://github.com/rafaelaznar/
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -34,7 +34,7 @@ THE SOFTWARE.
         <span class="icon-bar"></span>
     </button>
     <a class='navbar-brand'  href='#/home'>
-        <i class="fa fa-th fa-1x"></i><i class="fa fa-th fa-1x"></i> sisane <i class="fa fa-th fa-1x"></i><i class="fa fa-th fa-1x"></i>
+        <i class="fa fa-th fa-1x"></i><i class="fa fa-th fa-1x"></i> andamio <i class="fa fa-th fa-1x"></i><i class="fa fa-th fa-1x"></i>
     </a>
 </div>
 <div id="navbar" class="navbar-collapse collapse" >
