--- a/public_html/js/aviso/removepop.html
+++ b/public_html/js/aviso/removepop.html
@@ -61,7 +61,7 @@ THE SOFTWARE.
                                         <td ng-show="f.type == 'date'">{{bean[f.name]}}</td>
                                         <td ng-show="f.type == 'text'">{{bean[f.name]}}</td>
                                         <!-- ------------- -->
-                                        <td ng-show="f.name == 'obj_tipodocumento'">{{bean[f.name].descripcion}}</td>
+                                        <td ng-show="f.name == 'obj_tipousuario'">{{bean[f.name].descripcion}}</td>
                                     </tr>
                                 </tbody>
                             </table>
