Tabla valoracion creada - adrian rodriguez

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -154,11 +154,19 @@
         <script src="js/aviso/plist.js" type="text/javascript"></script>
         <script src="js/aviso/remove.js" type="text/javascript"></script>
         <script src="js/aviso/removepop.js" type="text/javascript"></script>
-        <script src="js/aviso/selection.js" type="text/javascript"></script>
         <script src="js/aviso/service.js" type="text/javascript"></script>
         <script src="js/aviso/view.js" type="text/javascript"></script>
         <script src="js/aviso/viewpop.js" type="text/javascript"></script>
         <!-- ------------------------------- -->
+        <script src="js/valoracion/edit.js" type="text/javascript"></script>
+        <script src="js/valoracion/new.js" type="text/javascript"></script>
+        <script src="js/valoracion/plist.js" type="text/javascript"></script>
+        <script src="js/valoracion/remove.js" type="text/javascript"></script>
+        <script src="js/valoracion/removepop.js" type="text/javascript"></script>
+        <script src="js/valoracion/selection.js" type="text/javascript"></script>
+        <script src="js/valoracion/service.js" type="text/javascript"></script>
+        <script src="js/valoracion/view.js" type="text/javascript"></script>
+        <script src="js/valoracion/viewpop.js" type="text/javascript"></script>
     </body>
 </html>
 
