--- a/public_html/js/system/menu.html
+++ b/public_html/js/system/menu.html
@@ -50,6 +50,7 @@ THE SOFTWARE.
                 <li ng-class="{ active: isActive('/product/plist')}"><a href="#/product/plist"><i class="fa fa-fw fa-gift"></i>Producto</a></li>
                 <li ng-class="{ active: isActive('/producttype/plist')}"><a href="#/producttype/plist"><i class="fa fa-fw fa-shopping-basket "></i>Tipo de Producto</a></li>
                 <li ng-class="{ active: isActive('/aviso/plist')}"><a href="#/aviso/plist"><i class="fa fa-fw fa-exclamation-triangle "></i>Aviso</a></li>
+                <li ng-class="{ active: isActive('/valoracion/plist')}"><a href="#/valoracion/plist"><i class="fa fa-fw fa-thumbs-up"></i>Valoracion</a></li>
 
 
 
