--- a/public_html/index.html
+++ b/public_html/index.html
@@ -167,6 +167,17 @@
         <script src="js/valoracion/service.js" type="text/javascript"></script>
         <script src="js/valoracion/view.js" type="text/javascript"></script>
         <script src="js/valoracion/viewpop.js" type="text/javascript"></script>
+        <!-- ------------------------------- -->  
+        <script src="js/prioridad/edit.js" type="text/javascript"></script>
+        <script src="js/prioridad/new.js" type="text/javascript"></script>
+        <script src="js/prioridad/plist.js" type="text/javascript"></script>
+        <script src="js/prioridad/remove.js" type="text/javascript"></script>
+        <script src="js/prioridad/removepop.js" type="text/javascript"></script>
+        <script src="js/prioridad/selection.js" type="text/javascript"></script>
+        <script src="js/prioridad/service.js" type="text/javascript"></script>
+        <script src="js/prioridad/view.js" type="text/javascript"></script>
+        <script src="js/prioridad/viewpop.js" type="text/javascript"></script>        
+        <!-- ------------------------------- --> 
     </body>
 </html>
 
