--- a/public_html/index.html
+++ b/public_html/index.html
@@ -178,6 +178,16 @@
         <script src="js/prioridad/view.js" type="text/javascript"></script>
         <script src="js/prioridad/viewpop.js" type="text/javascript"></script>        
         <!-- ------------------------------- --> 
+        <script src="js/estado/edit.js" type="text/javascript"></script>
+        <script src="js/estado/new.js" type="text/javascript"></script>
+        <script src="js/estado/plist.js" type="text/javascript"></script>
+        <script src="js/estado/remove.js" type="text/javascript"></script>
+        <script src="js/estado/removepop.js" type="text/javascript"></script>
+        <script src="js/estado/selection.js" type="text/javascript"></script>
+        <script src="js/estado/service.js" type="text/javascript"></script>
+        <script src="js/estado/view.js" type="text/javascript"></script>
+        <script src="js/estado/viewpop.js" type="text/javascript"></script>
+        <!-- ------------------------------- -->
     </body>
 </html>
 
