--- a/public_html/index.html
+++ b/public_html/index.html
@@ -188,6 +188,16 @@
         <script src="js/estado/view.js" type="text/javascript"></script>
         <script src="js/estado/viewpop.js" type="text/javascript"></script>
         <!-- ------------------------------- -->
+        <script src="js/proyecto/edit.js" type="text/javascript"></script>
+        <script src="js/proyecto/new.js" type="text/javascript"></script>
+        <script src="js/proyecto/plist.js" type="text/javascript"></script>
+        <script src="js/proyecto/remove.js" type="text/javascript"></script>
+        <script src="js/proyecto/removepop.js" type="text/javascript"></script>
+        <script src="js/proyecto/selection.js" type="text/javascript"></script>
+        <script src="js/proyecto/service.js" type="text/javascript"></script>
+        <script src="js/proyecto/view.js" type="text/javascript"></script>
+        <script src="js/proyecto/viewpop.js" type="text/javascript"></script>
+        <!-- ------------------------------- -->
     </body>
 </html>
 
