--- a/public_html/js/system/menu.html
+++ b/public_html/js/system/menu.html
@@ -53,7 +53,8 @@ THE SOFTWARE.
                 <li ng-class="{ active: isActive('/valoracion/plist')}"><a href="#/valoracion/plist"><i class="fa fa-fw fa-thumbs-up"></i>Valoracion</a></li>
                 <li ng-class="{ active: isActive('/prioridad/plist')}"><a href="#/prioridad/plist"><i class="fa fa-fw fa-bookmark-o "></i>Prioridad</a></li>
                 <li ng-class="{ active: isActive('/estado/plist')}"><a href="#/estado/plist"><i class="fa fa-fw fa-meh-o"></i>Estado</a></li>
-                
+                <li ng-class="{ active: isActive('/proyecto/plist')}"><a href="#/proyecto/plist"><i class="fa fa-folder-open"></i>Proyectos</a></li>
+
 
 
                 <!--
