Tarea added working

--- a/public_html/js/system/menu.html
+++ b/public_html/js/system/menu.html
@@ -54,7 +54,7 @@ THE SOFTWARE.
                 <li ng-class="{ active: isActive('/prioridad/plist')}"><a href="#/prioridad/plist"><i class="fa fa-fw fa-bookmark-o "></i>Prioridad</a></li>
                 <li ng-class="{ active: isActive('/estado/plist')}"><a href="#/estado/plist"><i class="fa fa-fw fa-meh-o"></i>Estado</a></li>
                 <li ng-class="{ active: isActive('/proyecto/plist')}"><a href="#/proyecto/plist"><i class="fa fa-folder-open"></i>Proyectos</a></li>
-
+                <li ng-class="{ active: isActive('/tarea/plist')}"><a href="#/tarea/plist"><i class="fa fa-folder-open"></i>Tarea</a></li>
 
 
                 <!--
