--- a/public_html/index.html
+++ b/public_html/index.html
@@ -198,6 +198,16 @@
         <script src="js/proyecto/view.js" type="text/javascript"></script>
         <script src="js/proyecto/viewpop.js" type="text/javascript"></script>
         <!-- ------------------------------- -->
+        <script src="js/tarea/edit.js" type="text/javascript"></script>
+        <script src="js/tarea/new.js" type="text/javascript"></script>
+        <script src="js/tarea/plist.js" type="text/javascript"></script>
+        <script src="js/tarea/remove.js" type="text/javascript"></script>
+        <script src="js/tarea/removepop.js" type="text/javascript"></script>
+        <script src="js/tarea/selection.js" type="text/javascript"></script>
+        <script src="js/tarea/service.js" type="text/javascript"></script>
+        <script src="js/tarea/view.js" type="text/javascript"></script>
+        <script src="js/tarea/viewpop.js" type="text/javascript"></script>
+        <!-- ------------------------------- -->
     </body>
 </html>
 
